--- a/appcenter-cli-1ES.yml
+++ b/appcenter-cli-1ES.yml
@@ -22,10 +22,10 @@ parameters:
   default: false
 
 extends:
-  ${{ if or(eq(variables['Build.Reason'], 'PullRequest'), eq('${{ parameters.Skip1ESComplianceTasks }}', 'true')) }}:
-    template: v1/1ES.Unofficial.PipelineTemplate.yml@1ESPipelineTemplates
-  ${{ else }}:
+  ${{ if or(eq(variables['Build.SourceBranch'], 'refs/heads/master'), eq('${{ parameters.Skip1ESComplianceTasks }}', 'true')) }}:
     template: v1/1ES.Official.PipelineTemplate.yml@1ESPipelineTemplates
+  ${{ else }}:
+    template: v1/1ES.Unofficial.PipelineTemplate.yml@1ESPipelineTemplates
   parameters:
     pool:
       name: 1ES-PT-CBL-Mariner-2.0-Gen2
