--- a/appcenter-cli-1ES.yml
+++ b/appcenter-cli-1ES.yml
@@ -22,7 +22,7 @@ parameters:
   default: false
 
 extends:
-  ${{ if or(eq(variables['Build.SourceBranch'], 'refs/heads/master'), eq('${{ parameters.Skip1ESComplianceTasks }}', 'true')) }}:
+  ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/master') }}:
     template: v1/1ES.Official.PipelineTemplate.yml@1ESPipelineTemplates
   ${{ else }}:
     template: v1/1ES.Unofficial.PipelineTemplate.yml@1ESPipelineTemplates
