--- a/.azurepipelines/appcenter-cli-1ES.yml
+++ b/.azurepipelines/appcenter-cli-1ES.yml
@@ -1,4 +1,8 @@
-trigger: none
+trigger:
+- master
+
+pr:
+- master
 
 variables: 
 - name: API_TOKEN_KEY_VAULT
@@ -13,8 +17,15 @@ resources:
     name: 1ESPipelineTemplates/1ESPipelineTemplates
     ref: refs/tags/release
 
+parameters:
+- name: Skip1ESComplianceTasks
+  default: false
+
 extends:
-  template: v1/1ES.Official.PipelineTemplate.yml@1ESPipelineTemplates
+  ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/master') }}:
+    template: v1/1ES.Official.PipelineTemplate.yml@1ESPipelineTemplates
+  ${{ else }}:
+    template: v1/1ES.Unofficial.PipelineTemplate.yml@1ESPipelineTemplates
   parameters:
     pool:
       name: 1ES-PT-CBL-Mariner-2.0-Gen2
@@ -22,6 +33,8 @@ extends:
     customBuildTags:
     - ES365AIMigrationTooling-BulkMigrated
     sdl:
+      ${{ if eq('${{ parameters.Skip1ESComplianceTasks }}', 'true') }}:
+        enableAllTools: false
       sourceAnalysisPool: 1ES-PT-Windows-2022
     stages:
     - stage: Stage
