[Pipeline] Split CI and PR template, move yml (#2478)
* Split CI and PR template, move yml

* Remove unused parameter

* Resolve comment

--- a/.azurepipelines/appcenter-cli-1ES.yml
+++ b/.azurepipelines/appcenter-cli-1ES.yml
@@ -1,4 +1,8 @@
-trigger: none
+trigger:
+- master
+
+pr:
+- master
 
 variables: 
 - name: API_TOKEN_KEY_VAULT
@@ -14,7 +18,10 @@ resources:
     ref: refs/tags/release
 
 extends:
-  template: v1/1ES.Official.PipelineTemplate.yml@1ESPipelineTemplates
+  ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/master') }}:
+    template: v1/1ES.Official.PipelineTemplate.yml@1ESPipelineTemplates
+  ${{ else }}:
+    template: v1/1ES.Unofficial.PipelineTemplate.yml@1ESPipelineTemplates
   parameters:
     pool:
       name: 1ES-PT-CBL-Mariner-2.0-Gen2
