--- a/.azurepipelines/appcenter-cli-1ES.yml
+++ b/.azurepipelines/appcenter-cli-1ES.yml
@@ -133,9 +133,10 @@ extends:
             replaceExistingArchive: true
             verbose: true
           displayName: 'Prepare npm artifact'
-
+    - stage: APIScan
+      pool: 1ES-PT-Windows-2022
+      jobs:
       - job: APIScan
-        pool: 1ES-PT-Windows-2022
         steps:
         - task: AzureKeyVault@2
           inputs:
