--- a/.azurepipelines/appcenter-cli-1ES.yml
+++ b/.azurepipelines/appcenter-cli-1ES.yml
@@ -134,6 +134,7 @@ extends:
             verbose: true
           displayName: 'Prepare npm artifact'
     - stage: APIScan
+      dependsOn: Stage
       pool: 1ES-PT-Windows-2022
       jobs:
       - job: APIScan
