add condition for functional tests for debugging

--- a/.azurepipelines/appcenter-cli-1ES.yml
+++ b/.azurepipelines/appcenter-cli-1ES.yml
@@ -98,11 +98,13 @@ extends:
             pwsh: true
             workingDirectory: $(Build.SourcesDirectory)
           displayName: 'Run functional tests'
+          condition: and(succeeded(), ne(variables['SkipFunctionalTests'], 'true'))
 
         - script: |
             [ -f './test/functional/testresult.xml' ]
           displayName: 'Verify that functional test result file exists'
           workingDirectory: $(Build.SourcesDirectory)
+          condition: and(succeeded(), ne(variables['SkipFunctionalTests'], 'true'))
 
         - task: PublishTestResults@2
           inputs:
@@ -112,6 +114,7 @@ extends:
             failTaskOnFailedTests: true
             testRunTitle: 'Functional tests'
           displayName: 'Verify functional test result'
+          condition: and(succeeded(), ne(variables['SkipFunctionalTests'], 'true'))
 
         - script: |
             npm pack
