try to specify os name

--- a/.azurepipelines/appcenter-cli-1ES.yml
+++ b/.azurepipelines/appcenter-cli-1ES.yml
@@ -138,7 +138,9 @@ extends:
           displayName: 'Prepare npm artifact'
     - stage: APIScan
       dependsOn: Stage
-      pool: 1ES-PT-Windows-2022
+      pool:
+        name: 1ES-PT-Windows-2022
+        os: windows
       jobs:
       - job: APIScan
         steps:
