--- a/.azurepipelines/appcenter-cli-1ES.yml
+++ b/.azurepipelines/appcenter-cli-1ES.yml
@@ -141,6 +141,8 @@ extends:
       pool:
         name: 1ES-PT-Windows-2022
         os: windows
+      variables:
+        "agent.source.skip": true
       jobs:
       - job: APIScan
         steps:
@@ -148,6 +150,10 @@ extends:
           displayName: Download Build Artifacts for APIScan
           inputs:
             artifactName: npm
+        - script: |
+            echo "Structure of work folder of this pipeline:"
+            tree $(Agent.WorkFolder)\1 /f
+          displayName: Check artifact folder
         - task: AzureKeyVault@2
           inputs:
             azureSubscription: 'AC - Dev Infra & Build Pool'
@@ -157,7 +163,7 @@ extends:
         - task: APIScan@2
           displayName: 'Run APIScan'
           inputs:
-            softwareFolder: '$(System.ArtifactsDirectory)\npm'
+            softwareFolder: '$(System.ArtifactsDirectory)'
             softwareName: 'appcenter-cli'
             softwareVersionNum: Latest
             isLargeApp: false
