--- a/.azurepipelines/appcenter-cli-1ES.yml
+++ b/.azurepipelines/appcenter-cli-1ES.yml
@@ -151,8 +151,14 @@ extends:
           inputs:
             artifactName: npm
         - script: |
-            echo "Structure of work folder of this pipeline:"
-            tree $(Agent.WorkFolder)\1 /f
+            echo "Work folder:"
+            tree $(Agent.BuildDirectory) /f
+
+            echo "Artifacts folder:"
+            tree $(System.ArtifactsDirectory) /f
+
+            echo "Artifacts staging folder:"
+            tree $(Build.ArtifactStagingDirectory) /f
           displayName: Check artifact folder
         - task: AzureKeyVault@2
           inputs:
