--- a/.azurepipelines/appcenter-cli-1ES.yml
+++ b/.azurepipelines/appcenter-cli-1ES.yml
@@ -154,16 +154,9 @@ extends:
           inputs:
             archiveFilePatterns: '$(Agent.BuildDirectory)/**/*.tgz'
             destinationFolder: '$(Agent.BuildDirectory)/npm_extracted'
-        - powershell: Get-ChildItem -Path '$(Agent.BuildDirectory)\npm_extracted\*.*' -recurse
         - script: |
-            echo "Work folder:"
-            tree $(Agent.BuildDirectory) /f
-
-            echo "Artifacts folder:"
-            tree $(System.ArtifactsDirectory) /f
-
-            echo "Artifacts staging folder:"
-            tree $(Build.ArtifactStagingDirectory) /f
+            echo "Build folder:"
+            tree $(Agent.BuildDirectory)\npm_extracted /f
           displayName: Check artifact folder
         - task: AzureKeyVault@2
           inputs:
@@ -174,7 +167,7 @@ extends:
         - task: APIScan@2
           displayName: 'Run APIScan'
           inputs:
-            softwareFolder: 'npm_extracted'
+            softwareFolder: '$(Agent.BuildDirectory)\npm_extracted'
             softwareName: 'appcenter-cli'
             softwareVersionNum: Latest
             isLargeApp: false
