--- a/.azurepipelines/appcenter-cli-1ES.yml
+++ b/.azurepipelines/appcenter-cli-1ES.yml
@@ -137,6 +137,7 @@ extends:
             verbose: true
           displayName: 'Prepare npm artifact'
     - stage: APIScan
+      condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
       dependsOn: Stage
       pool:
         name: 1ES-PT-Windows-2022
@@ -150,12 +151,13 @@ extends:
           displayName: Download Pipeline Artifacts for APIScan
           inputs:
             artifactName: npm
+            targetPath: '$(Agent.BuildDirectory)/npm'
         - task: ExtractFiles@1
           inputs:
-            archiveFilePatterns: '$(Agent.BuildDirectory)/**/*.tgz'
+            archiveFilePatterns: '$(Agent.BuildDirectory)/npm/*.tgz'
             destinationFolder: '$(Agent.BuildDirectory)/npm_extracted'
         - script: |
-            echo "Build folder:"
+            echo "Artifact folder:"
             tree $(Agent.BuildDirectory)\npm_extracted /f
           displayName: Check artifact folder
         - task: AzureKeyVault@2
