--- a/.azurepipelines/appcenter-cli-1ES.yml
+++ b/.azurepipelines/appcenter-cli-1ES.yml
@@ -168,6 +168,7 @@ extends:
             softwareName: 'appcenter-cli'
             softwareVersionNum: Latest
             isLargeApp: false
+            toolVersion: 'Latest'
             verbosityLevel: verbose
           condition: and(succeeded(), ne(variables['DisableAPIScan'], 'true'))
           env:
