--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
     "lodash": "4.17.21",
     "minimist": "1.2.6",
     "mkdirp": "1.0.4",
-    "node-fetch": "^2.6.7",
+    "node-fetch": "~2.7.0",
     "omelette": "0.4.17",
     "opener": "1.5.2",
     "p-limit": "3.1.0",
