--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "@xmldom/xmldom": "0.8.7",
     "abort-controller": "3.0.0",
     "appcenter-file-upload-client": "0.1.0",
-    "appcenter-file-upload-client-node": "^1.2.11",
+    "appcenter-file-upload-client-node": "1.2.12",
     "bplist": "0.0.4",
     "chalk": "4.1.2",
     "cli-spinner": "0.2.10",
